samples/_failures_safe/1761339948_f271d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7767f253.c: In function ‘get_user_data’:
./samples/SAFE/__tmp_7767f253.c:176:5: error: expected declaration or statement at end of input
  176 |     }
      |     ^
